fix: z-index fix

--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -397,7 +397,7 @@ ul.task-list {
     color: var(--text-muted);
     overflow-y: auto;
     width: 290px;
-    z-index: 1;
+    z-index: 3;
     border-radius: 10px;
     h1 {
         font-size: 32px !important;
